# microbrain

./: .gitignore  .pre-commit-config.yaml  LICENSE.MD  README.md  SECURITY.md  pyproject.toml  requirements.txt
microbrain/: LICENSE.MD  README.md  README_SPLIT.md  agent.py  cli.py  config.py  microbrain.py  microbrain.pyproj  microbrain.sln  mind.py  ollama_client.py  requirements.txt  tools.py
microbrain/legacy/: mindprog_ollama.py
microbrain/memory/: memory_store.py
microbrain/utils/: logging_setup.py
microbrain/voice/: asr.py  loop.py  tts.py
tests/: test_sanity.py
