[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microbrain"
version = "0.1.0"
description = "Modular neuron/worker-based mind architecture."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.md" }
authors = [{ name = "Joseph W. Brugh" }]
dependencies = [
    "vosk==0.3.45",
    "sounddevice==0.4.6",
    "numpy>=1.24"
]

[project.scripts]
microbrain = "microbrain.cli:main"

# Auto-discover 'microbrain' package in the repo root
[tool.setuptools.packages.find]
include = ["microbrain*"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

# Exclude unfinished/WIP areas from linting for now.
exclude = [
  "microbrain/legacy/*",
  "microbrain/voice/*",
  "microbrain/memory/*",
  "microbrain/ollama_client.py",
  "microbrain/tools.py",
  "microbrain/microbrain.py",
]

[tool.ruff.lint]
# Keep useful rules, but use new 'lint' section Ruff expects.
select = ["E", "F", "I", "UP", "B"]
ignore = [
  "E501",  # long lines: relaxed for now
]

# If you later want to lint a single file but quiet some errors:
[tool.ruff.lint.per-file-ignores]
# Example of targeted ignores you can add when you re-include files
# "microbrain/tools.py" = ["F811", "F821", "UP006", "UP007"]
